--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.13.3 [2015-11-01 Sun]:
+`?estimateBaseline`: clarify that "decreasing=TRUE" is the default for the SNIP
+baseline estimation algorithm (`estimateBaseline(..., method="SNIP")`).
+
 Version 1.13.2 [2015-09-22 Tue]:
 MALDIquant depends on R 3.2.0 now. Due to a bug in R
 (PR#15707, fixed in R 3.2.0) the ... argument was not interpreted in nested
