--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.14.1 [2016-01-17 Sun]:
+- INTERNAL: remove textLabelRect-functions.R and move it content to
+calculateLabelPositions.
 
 CHANGES IN MALDIquant VERSION 1.14 [2015-11-18]:
 ------------------------------------------------
