--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
 Version 1.14.1 [2016-01-17 Sun]:
+- BUGFIX: `labelPeaks` didn't respect "srt=c(90, 180, 270, 360)" if
+  "avoidOverlap=TRUE". Please note that "srt %% 90 != 0" in combination with
+  "avoidOverlap=TRUE" is still not supported!
 - INTERNAL: remove textLabelRect-functions.R and move it content to
 calculateLabelPositions.
 
