--- a/NEWS
+++ b/NEWS
@@ -5,8 +5,8 @@ Version 1.14.1 [2016-01-17 Sun]:
 - BUGFIX: `labelPeaks` didn't respect "srt=c(90, 180, 270, 360)" if
   "avoidOverlap=TRUE". Please note that "srt %% 90 != 0" in combination with
   "avoidOverlap=TRUE" is still not supported!
-- INTERNAL: remove textLabelRect-functions.R and move it content to
-calculateLabelPositions.
+- INTERNAL: remove textLabelRect-functions.R and move its content to
+  calculateLabelPositions-functions.R.
 
 CHANGES IN MALDIquant VERSION 1.14 [2015-11-18]:
 ------------------------------------------------
