--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ Version 1.14.2 [2016-03-08 Tue]:
   sometimes misleading label.
 - Add `mz` and `mz<-` (same as `mass`/`mass<-`) to follow `ProtGenerics`
   guidelines and for consistency.
+- INTERNAL: throw an error if `trim,list` was called on a generic list instead
+  of a list of AbstractMassObjects.
 
 Version 1.14.1 [2016-01-17 Sun]:
 - BUGFIX: `labelPeaks` didn't respect "srt=c(90, 180, 270, 360)" if
