--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
 Version 1.14.5 [2016-03-13 Wed]:
+- Add `esiprot`.
 - Add `topN`.
 
 Version 1.14.4 [2016-04-03 Sun]:
