--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+Version 1.14.4 [2016-04-03 Sun]:
+- Add `monoisotopicPeaks` to find monoisotopic peaks in `MassPeaks` objects.
+
 Version 1.14.3 [2016-03-12 Sat]:
 - BUG: throw a warning if `plotMsiSlice` was called on a interactive device with
   multiple centers (the warning was not thrown correctly before).
