--- a/NEWS
+++ b/NEWS
@@ -1,28 +1,37 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
-Version 1.14.4 [2016-04-03 Sun]:
-- Add `monoisotopicPeaks` to find monoisotopic peaks in `MassPeaks` objects.
 
-Version 1.14.3 [2016-03-12 Sat]:
-- BUG: throw a warning if `plotMsiSlice` was called on a interactive device with
-  multiple centers (the warning was not thrown correctly before).
+CHANGES IN MALDIquant VERSION 1.15 [2016-06-25]:
+------------------------------------------------
 
-Version 1.14.2 [2016-03-08 Tue]:
-- `plot`: x-axis label is "m/z" now (was "mass" before).
+NEW FEATURES
+
+* Add `monoisotopicPeaks` to find monoisotopic peaks in `MassPeaks` objects.
+
+IMPROVEMENTS
+
+* `plot`: x-axis label is "m/z" now (was "mass" before).
   Thanks to Robert Winkler <robert.winkler@bioprocess.org> for reporting of the
   sometimes misleading label.
-- Add `mz` and `mz<-` (same as `mass`/`mass<-`) to follow `ProtGenerics`
+* Add `mz` and `mz<-` (same as `mass`/`mass<-`) to follow `ProtGenerics`
   guidelines and for consistency.
-- INTERNAL: throw an error if `trim,list` was called on a generic list instead
-  of a list of AbstractMassObjects.
 
-Version 1.14.1 [2016-01-17 Sun]:
-- BUGFIX: `labelPeaks` didn't respect "srt=c(90, 180, 270, 360)" if
+BUGFIXES
+
+* `labelPeaks` didn't respect "srt=c(90, 180, 270, 360)" if
   "avoidOverlap=TRUE". Please note that "srt %% 90 != 0" in combination with
   "avoidOverlap=TRUE" is still not supported!
-- INTERNAL: remove textLabelRect-functions.R and move its content to
+
+INTERNAL
+
+* Throw a warning if `plotMsiSlice` was called on a interactive device with
+  multiple centers (the warning was not thrown correctly before).
+* Throw an error if `trim,list` was called on a generic list instead
+  of a list of AbstractMassObjects.
+* Remove textLabelRect-functions.R and move its content to
   calculateLabelPositions-functions.R.
+
 
 CHANGES IN MALDIquant VERSION 1.14 [2015-11-18]:
 ------------------------------------------------
