--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+1.15.1
+
+- NEW FEATURES `.which.closest` gains a "tolerance" and "nomatch" argument to
+  allow relaxed matching.
+- INTERNAL `.which.closest` now returns the left (smaller) index if the
+  difference to the target is identical for the left (smaller) and the
+  right (larger) index (should not change anything because `.which.closest` was
+  not exported yet).
 
 CHANGES IN MALDIquant VERSION 1.15 [2016-06-25]:
 ------------------------------------------------
