--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,15 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+CHANGES IN MALDIquant VERSION 1.16.3 [2017-05-30]:
+--------------------------------------------------
+
+IMPROVEMENTS
+
+* Mass values are sorted now if they were not before;
+  affected functions: `createMassSpectrum`, `createMassPeaks`, `validObject`.
+
+
 CHANGES IN MALDIquant VERSION 1.16.2 [2017-04-04]:
 --------------------------------------------------
 
