--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,15 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
+CHANGES IN MALDIquant VERSION 1.16.4 [2017-08-27]:
+--------------------------------------------------
+
+BUGFIXES
+
+* `coordinates` now returns `NULL` (instead of an error) if there are no imaging
+  information in the metadata of a spectrum/peaks list.
+
+
 CHANGES IN MALDIquant VERSION 1.16.3 [2017-05-30]:
 --------------------------------------------------
 
