--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
+CHANGES IN MALDIquant VERSION 1.17:
+--------------------------------------------------
+IMPROVEMENTS
+
+* Added weighted moving average as an option in moving average smoothing of spectra
+
 
 CHANGES IN MALDIquant VERSION 1.16.4 [2017-08-27]:
 --------------------------------------------------
