--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ NEW FEATURES
 
 * `smoothIntensity` gains a new argument "weighted" (default: `FALSE`) for
   `method="MovingAverage"`. If `TRUE` a weighted moving average is applied.
-  Added Sigurdur Smarason.
+  Added by Sigurdur Smarason.
 
 
 CHANGES IN MALDIquant VERSION 1.16.4 [2017-08-27]:
