Add emptyNoMatches to warpMass{Peaks,Spectra}; see #57

--- a/NEWS
+++ b/NEWS
@@ -9,7 +9,13 @@ IMPROVEMENTS
 * `determineWarpingFunctions` gains an `allowNoMatch` argument. If
   `allowNoMatch` is `TRUE` a warning is thrown instead of an error and the
   resulting list of warping functions will contain `NA` at the specific index;
-  see #57; Suggested by Melanie Föll (@foellmelanie).
+  see #57.
+  Suggested by Melanie Föll (@foellmelanie).
+* `warpMassPeaks`/`warpMassSpectra` gain an `emptyNoMatches` argument. If
+  `emptyNoMatches` is `TRUE` the intensity values of
+  `MassPeaks`/`MassSpectra` objects with missing warping functions are set to
+  zero; see #57 for details.
+  Suggested by Melanie Föll (@foellmelanie).
 
 
 CHANGES IN MALDIquant VERSION 1.18 [2018-05-02]:
