--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ CHANGES IN MALDIquant VERSION 1.19.5 [2020-04-02]:
 
 BUGFIXES
 
-* Don't import `plot` and `plot.default` from graphics to fix error in R-devel.
+* Don't import `plot` from graphics to fix error in R-devel.
 
 
 CHANGES IN MALDIquant VERSION 1.19.4 [2019-08-08]:
