chore: bump minimal R version to 4.0.0

--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,8 @@ CHANGES IN MALDIquant VERSION 1.19.5 [2020-04-02]:
 
 BUGFIXES
 
-* Don't import `plot` from graphics to fix error in R-devel.
+* Don't import `plot` from graphics to fix error in R-devel (R 4.0.0)
+* Bump required R version to 4.0.0.
 
 
 CHANGES IN MALDIquant VERSION 1.19.4 [2019-08-08]:
