--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
-CHANGES IN MALDIquant VERSION 1.20 [2021-07-28]:
+CHANGES IN MALDIquant VERSION 1.20 [2021-07-29]:
 ------------------------------------------------
 
 NEW FEATURES
@@ -14,6 +14,7 @@ MODIFICATIONS
 
 * Don't run example in `MALDIquant-parallel` manual page to avoid long example
   runtime WARNING in R CMD check.
+* Change URLs from http to https where possible.
 
 
 CHANGES IN MALDIquant VERSION 1.19.5 [2020-04-02]:
