--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,13 @@ RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 CHANGES IN MALDIquant VERSION 1.20.0.9999 [unreleased]:
 -------------------------------------------------------
 
+MODIFICATIONS
+
+* Reduce memory requirement for `filterPeaks`, especially for very sparse peak
+  lists by rewriting `filterPeaks` and `.as.matrix.MassObjectList` to use a
+  `list` internally instead of a `matrix`; see #71.
+  Contributed by Paolo Inglese <p.inglese@outlook.com> (@paoloinglese).
+
 INTERNAL CHANGES
 
 * Remove `is.null(getGeneric(...))` tests before setting generics for
