--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
 RELEASE HISTORY OF THE "MALDIquant" PACKAGE
 ===========================================
 
-CHANGES IN MALDIquant VERSION 1.20.0.9999 [unreleased]:
--------------------------------------------------------
+CHANGES IN MALDIquant VERSION 1.21 [2021-12-19]
+-----------------------------------------------
 
 MODIFICATIONS
 
